--- a/hello.htm
+++ b/hello.htm
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<h1>Hello, World!</h1>
+		<a href=”Trofimov.htm”>Trofimov</a>.
 		<!-- This is an unwanted but committed change -->
 	</body>
 </html>
