--- a/hello.htm
+++ b/hello.htm
@@ -6,6 +6,7 @@
 	<body>
 		<h1>Hello, World!</h1>
 		<a href=”Trofimov.htm”>Trofimov</a>.
+		<a href=”Clone.htm”>Clone</a>.
 		<!-- This is an unwanted but committed change -->
 	</body>
 </html>
